iptables.rules
# Generated by iptables-save v1.3.8 on Thu Jul 24 18:32:03 2008
*nat
:PREROUTING ACCEPT [317864:41907509]
:POSTROUTING ACCEPT [131058:8535354]
:OUTPUT ACCEPT [472651:30387630]
-A PREROUTING -p tcp -m tcp --dport 2222 -j DNAT --to-destination 192.168.0.4:22 
# -A POSTROUTING -o eth0 -j MASQUERADE 
-A POSTROUTING -o ppp0 -j MASQUERADE 
COMMIT
# Completed on Thu Jul 24 18:32:03 2008
# Generated by iptables-save v1.3.8 on Thu Jul 24 18:32:03 2008
*filter
:INPUT DROP [119638:22791823]
:FORWARD ACCEPT [0:0]
-A FORWARD -p tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
:OUTPUT ACCEPT [35547107:29720248633]
-A INPUT -p udp -m udp --dport 27733 -j ACCEPT 
-A INPUT -p udp -m udp --dport 3074 -j ACCEPT 
-A INPUT -p udp -m udp --dport 1716 -j ACCEPT 
-A INPUT -p udp -m udp --dport 1717 -j ACCEPT 
-A INPUT -p udp -m udp --dport 1718 -j ACCEPT 
-A INPUT -p udp -m udp --dport 8000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT 
-A INPUT -p udp -m udp --dport 8777 -j ACCEPT 
-A INPUT -p udp -m udp --dport 27900 -j ACCEPT 
-A INPUT -p udp -m udp --dport 27960 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 27960 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 20045 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 20046 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5000 -j ACCEPT 
-A INPUT -p udp -m udp --dport 5672 -j ACCEPT 
-A INPUT -p udp -m udp --dport 5665 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5662 -j ACCEPT 
-A INPUT -s 66.244.193.9 -j DROP 
-A INPUT -s 209.5.183.137 -j DROP 
-A INPUT -s 192.246.40.56 -j DROP 
-A INPUT -s 192.246.40.28 -j DROP 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp -m udp --dport 123 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 20 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 81 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8008 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5688 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 500 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 554 -j ACCEPT 
-A INPUT -p udp -m udp --dport 554 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 79 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 113 -j ACCEPT 
-A INPUT -p udp -m udp --dport 5120:5300 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 6666 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 6667 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 12321 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 28004 -j ACCEPT 
-A INPUT -p ah -j ACCEPT 
-A INPUT -p esp -j ACCEPT 
-A INPUT -i eth0 -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A INPUT -p icmp -m limit --limit 5/min -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT 
-A INPUT -p icmp -j REJECT --reject-with icmp-host-unreachable 
-A FORWARD -s 192.246.40.28 -j DROP 
-A FORWARD -d 213.46.255.2 -p tcp -m tcp --dport 25 -j ACCEPT 
-A FORWARD -p tcp -m tcp --dport 25 -j DROP 
COMMIT
# Completed on Thu Jul 24 18:32:03 2008
